# Little-Bear

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  config-schema.md  config.schema.json  database-schema.md  docker-compose.yml  openapi.yaml  package-lock.json  package.json  pyproject.toml  企业内部高并发生产级RAG检索系统后端设计.md  审计事件字典.md  开发进度追踪.md  本地开发环境.md  权限矩阵.md  正式编码前任务追踪.md  测试计划.md  状态机设计.md  项目设计流程梳理.md
apps/admin/: index.html  package.json  vite.config.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
docs/: MVP范围说明.md  README.md  架构设计文档.md  项目执行流程图.md
docs/admin/: 管理后台交互契约.md
docs/archive/: 企业内部高并发生产级RAG检索系统后端设计.md
docs/contracts/: config-schema.md  config.schema.json  database-schema.md  openapi.yaml  审计事件字典.md  权限矩阵.md  状态机设计.md
docs/development/: 本地开发环境.md
docs/evaluation/: 模型与检索评测基线.md
docs/examples/: eval-dataset.local.p1.jsonl  setup-initialization.local.p0.json
docs/modules/: 00-公共实现约束.md  01-初始化服务设计实现文档.md  02-认证服务设计实现文档.md  03-组织服务设计实现文档.md  04-权限服务设计实现文档.md  05-配置服务设计实现文档.md  06-导入服务与工作进程设计实现文档.md  07-索引服务设计实现文档.md  08-查询服务设计实现文档.md  09-检索上下文与答案生成设计实现文档.md  10-模型网关设计实现文档.md  11-审计与可观测性设计实现文档.md  12-接口网关与高并发设计实现文档.md  13-部署与运维设计实现文档.md  14-核心数据模型设计实现文档.md  15-前端与管理后台API设计实现文档.md
docs/observability/: 审计查询与展示扩展.md
docs/operations/: 安装部署操作手册.md  部署与发布检查清单.md  配置变更与热更新策略.md
docs/planning/: 正式编码前任务追踪.md
docs/testing/: 测试计划.md
tests/integration/: test_qdrant_indexing_flow.py
tests/unit/: test_admin_route.py  test_admin_service.py  test_answer_service.py  (+36 more)
tools/: mock_model_gateway.py  p0_smoke.py
(+133 files in other folders)
